--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
 <center>
-<button class="btn btn-success">Feed back for snapline</button>
+<button class="btn btn-success">Feed back for independence filter</button>
 
 <div class="powr-comments" id="c080308f_1620660515"></div><script src="https://www.powr.io/powr.js?platform=html"></script>
 
-<button class="btn btn-info" onclick="redirect()">Snapline</button>
+<button class="btn btn-info" onclick="redirect()">Open Independence Filter</button>
 </form>
 </center>
 <script src="main.js"></script>
