--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 <div class="powr-comments" id="c080308f_1620660515"></div><script src="https://www.powr.io/powr.js?platform=html"></script>
 
+    <button class= "btn btn-danger" onclick = "mainpage()">Return to filter app</button>
 </form>
 </center>
 <script src="main.js"></script>
